move facebook login to own component...working some times: event does not trigger to ngrok site?

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,17 @@
           xfbml            : false,
           version          : 'v5.0'
         });
+      const fbInitEvent = new Event('FBObjectReady')
+      document.dispatchEvent(fbInitEvent)
       };
+      (function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) { return; }
+      js = d.createElement(s); js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
     </script>
-    <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
